# IFunnyGifMaker

./: .gitignore  .pdm-python  README.md  meme-maker.py  pyproject.toml  test.json
ifunnygifmaker/: meme.py  mememaker.py
ifunnygifmaker/utils/: image_utils.py
